--- a/[M1S03] Ex-5-Valida_Senha/index.html
+++ b/[M1S03] Ex-5-Valida_Senha/index.html
@@ -29,11 +29,11 @@
       <path d="m9 9 6 6"></path>
     </svg> <span>login recusado</span>
     </span>
-    <span class="acessLogin"><svg width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round"
-                                  stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" style="stroke: #2cf313;>
+    <span class="acessLogin"><svg width="20" height="20" fill="none" stroke="#28ec0e" stroke-linecap="round"
+                                  stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
   <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path>
   <path d="M22 4 12 14.01l-3-3"></path>
-</svg> <span>login aceito</span>
+</svg><span>login aceito</span>
     </span>
   </div>
 </div>
